<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.pages.main.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/image_place"
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@android:color/black"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/tv_no_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="?colorSurfaceVariant"
                    android:gravity="center"
                    android:text="@string/no_image"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_open_camera"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/camera"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toStartOf="@id/space"
            app:layout_constraintStart_toStartOf="@id/image_place"
            app:layout_constraintTop_toBottomOf="@id/image_place" />

        <Space
            android:id="@+id/space"
            android:layout_width="20dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_open_camera"
            app:layout_constraintEnd_toStartOf="@id/btn_open_gallery"
            app:layout_constraintStart_toEndOf="@id/btn_open_camera"
            app:layout_constraintTop_toTopOf="@id/btn_open_camera" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_open_gallery"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@id/image_place"
            app:layout_constraintStart_toEndOf="@id/space"
            app:layout_constraintTop_toTopOf="@id/btn_open_camera" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintEnd_toEndOf="@id/image_place"
            app:layout_constraintStart_toStartOf="@id/image_place"
            app:layout_constraintTop_toBottomOf="@id/btn_open_camera" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_description_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/description"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintEnd_toEndOf="@id/image_place"
            app:layout_constraintStart_toStartOf="@id/image_place"
            app:layout_constraintTop_toBottomOf="@id/tv_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:lines="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_location"
            app:layout_constraintStart_toStartOf="@id/image_place"
            app:layout_constraintTop_toBottomOf="@id/ed_description_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@id/image_place"
            app:layout_constraintStart_toStartOf="@id/image_place"
            app:layout_constraintTop_toBottomOf="@id/switch_add_location" />

        <RelativeLayout
            android:id="@+id/loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/overlay"
            android:clickable="true"
            android:elevation="4dp"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
